--- a/trunk/fflas-ffpack/fflas/Makefile.am
+++ b/trunk/fflas-ffpack/fflas/Makefile.am
@@ -39,7 +39,7 @@ pkgincludesub_HEADERS=       \
 	   fflas_level1.inl \
 	   fflas_level2.inl \
 	   fflas_level3.inl \
-	   fflas_avx_functions.h \
+	   fflas_simd_functions.h \
 	   fflas_fadd.inl        \
 	   fflas_fdot.inl        \
 	   fflas_ftrmm_src.inl   \
