--- a/trunk/configure.ac
+++ b/trunk/configure.ac
@@ -225,30 +225,17 @@ AC_LANG_CPLUSPLUS
 echo "-----------------------------------------------"
 
 FF_CHECK_GMP
-FF_CHECK_GIVARO
-
-# FF_CHECK_GMP(,,[
-# echo '*******************************************************************************'
-# echo ' WARNING: GMP not found! (this is not a problem for the moment)'
-# echo
-# echo ' GMP library compiled with --enable-cxx is required for this library to compile.'
-# echo ' Please make sure GMP is installed and specify its location with the option'
-# echo ' --with-gmp=<prefix> when running configure.'
-# echo ' Do not forget to set/export LD_LIBRARY_PATH if necessary.'
-# echo '*******************************************************************************'
-# ])
-
-
-# FF_CHECK_GIVARO(,,[
-# echo '*******************************************************************************'
-# echo ' WARNING: GIVARO not found! (this is not a problem for the moment)'
-# echo
-# echo ' GIVARO library is required for some tests in this library.'
-# echo ' Please make sure GIVARO is installed and specify its location with the'
-# echo ' option --with-givaro=<prefix> when running configure.'
-# echo ' Do not forget to set/export LD_LIBRARY_PATH if necessary.'
-# echo '*******************************************************************************'
-# ])
+FF_CHECK_GIVARO(,,[
+echo '*******************************************************************************'
+echo ' WARNING: GIVARO not found!'
+echo
+echo ' GIVARO library is required for some tests in this library.'
+echo ' Please make sure GIVARO is installed and specify its location with the'
+echo ' option --with-givaro=<prefix> when running configure.'
+echo ' Do not forget to set/export LD_LIBRARY_PATH if necessary.'
+echo '*******************************************************************************'
+exit 1
+])
 
 BLAS_FOUND=false
 
