--- a/trunk/configure.ac
+++ b/trunk/configure.ac
@@ -173,7 +173,11 @@ echo "-----------------------------------------------"
 
 echo "-----------------------------------------------"
 FF_CHECK_OMP
+
+# TODO do FF_CHECK_SIMD and take best, define USE_SSE2/AVX/AVX2/... and have also __FFLASFFPACK_USE_SIMD
+FF_CHECK_SSE
 FF_CHECK_AVX
+
 echo "-----------------------------------------------"
 AC_SUBST([PARFLAGS],['${AVXFLAGS} ${OMPFLAGS}'])
 	case x${CCNAM} in
