--- a/fflas-ffpack/fflas/Makefile.am
+++ b/fflas-ffpack/fflas/Makefile.am
@@ -29,7 +29,8 @@ SUBDIRS=fflas_fgemm fflas_fspmv fflas_igemm
 sparse=fflas_fspmv.h \
        fflas_fspmv.inl
 
-multiprecision= fflas_ftrsm_mp.inl fflas_igemm.h
+multiprecision= fflas_ftrsm_mp.inl
+# fflas_igemm.h
 
 pkgincludesub_HEADERS=       \
 	   fflas_bounds.inl      \
