fixing sse stuff ; forcing sse 4.1

--- a/configure.ac
+++ b/configure.ac
@@ -178,6 +178,8 @@ FF_CHECK_OMP
 FF_CHECK_SSE
 FF_CHECK_AVX
 
+AVXFLAGS="${SSEFLAGS} ${AVXFLAGS}"
+
 echo "-----------------------------------------------"
 AC_SUBST([PARFLAGS],['${AVXFLAGS} ${OMPFLAGS}'])
 	case x${CCNAM} in
