--- a/trunk/fflas-ffpack/utils/Makefile.am
+++ b/trunk/fflas-ffpack/utils/Makefile.am
@@ -30,6 +30,7 @@ pkgincludesub_HEADERS=       \
 	     flimits.h \
 	     Makefile.am \
 	     Matio.h  \
+	     bit_manipulation.h \
 	     print-utils.h
 
 
