--- a/trunk/fflas-ffpack/ffpack/Makefile.am
+++ b/trunk/fflas-ffpack/ffpack/Makefile.am
@@ -24,7 +24,7 @@
 
 pkgincludesubdir=$(pkgincludedir)/ffpack
 
-multiprecision= ffpack_ludivine_mp.inl
+multiprecision= ffpack_ludivine_mp.inl ffpack_pluq_mp.inl
 
 pkgincludesub_HEADERS=        \
 		ffpack_charpoly_danilevski.inl        \
