Added infos for jenkins integration + added gflops on some benchmarks

--- a/benchmarks/Makefile.am
+++ b/benchmarks/Makefile.am
@@ -81,7 +81,7 @@ benchmark_pluq_SOURCES = benchmark-pluq.C
 benchmark_dgemmd_CXXFLAGS = $(AM_CXXFLAGS) -D__SGEMM__
 
 # Perfpublisher script interaction - AB 2014/11/17
-perfpublisher: clean
+perfpublisher:
 	+./perfpublisher.sh "$(PERFPUBLISHERFILE)" "$(BENCHMARKS)"
 
 # for compilation of new benchmarks
