--- a/fflas-ffpack-config.in
+++ b/fflas-ffpack-config.in
@@ -99,7 +99,7 @@ while test $# -gt 0; do
 			;;
 
 		--cflags)
-			echo -I${includedir} @CBLAS_FLAG@ @AVXFLAGS@ # @PARFLAGS@ # @CUDA_CFLAGS@
+			echo -I${includedir} @CBLAS_FLAG@ @AVXFLAGS@ @CXXFLAGS@ @GMP_CFLAGS@ @GIVARO_CFLAGS@  # @PARFLAGS@ # @CUDA_CFLAGS@
 # @GMP_CFLAGS@ @GIVARO_CFLAGS@
 # @CBLAS_FLAG@
 			;;
@@ -109,8 +109,8 @@ while test $# -gt 0; do
 			;;
 
 		--libs)
-			echo  @CBLAS_LIBS@ # @CUDA_LIBS@
-# @GMP_LIBS@ @GIVARO_LIBS@
+			echo  @CBLAS_LIBS@ @GMP_LIBS@ @GIVARO_LIBS@
+# @CUDA_LIBS@
 			;;
 
 		--blas-libs)
