--- a/fflas-ffpack/fflas/Makefile.am
+++ b/fflas-ffpack/fflas/Makefile.am
@@ -50,6 +50,7 @@ pkgincludesub_HEADERS=       \
 	   fflas_ftrmm_src.inl   \
 	   fflas_fgemm.inl       \
 	   fflas_pfgemm.inl      \
+	   fflas_pfgemm_variants.inl \
 	   parallel.h		 \
            kaapi_routines.inl    \
 	   fflas_blockcuts.inl   \
