Fixed perfpublisher not getting compiler info

--- a/benchmarks/Makefile.am
+++ b/benchmarks/Makefile.am
@@ -82,7 +82,7 @@ benchmark_sgemm_CXXFLAGS = $(AM_CXXFLAGS) -D__SGEMM__
 
 # Perfpublisher script interaction - AB 2014/11/17
 perfpublisher:
-	+./perfpublisher.sh "$(PERFPUBLISHERFILE)" "$(BENCHMARKS)"
+	+./perfpublisher.sh "$(PERFPUBLISHERFILE)" "$(BENCHMARKS)" "$(CXX)"
 
 # for compilation of new benchmarks
 FFLASFFPACK_BIN=@bindir@
