new interface and new code for sparseMatrix; add fspmv, pfspmv, fspmm, pfspmm

--- a/fflas-ffpack/fflas/Makefile.am
+++ b/fflas-ffpack/fflas/Makefile.am
@@ -24,10 +24,12 @@
 
 pkgincludesubdir=$(pkgincludedir)/fflas
 
-SUBDIRS=fflas_fgemm fflas_fspmv fflas_igemm fflas_simd
+SUBDIRS=fflas_fgemm fflas_fspmv fflas_igemm fflas_simd fflas_sparse
 
 sparse=fflas_fspmv.h \
-       fflas_fspmv.inl
+       fflas_fspmv.inl \
+       fflas_sparse.h \
+       fflas_sparse.inl
 
 multiprecision= fflas_ftrsm_mp.inl \
 		fflas_fscal_mp.inl \
