fix bugs in spmv, spmm call ; add new sparseMatrix traits ; fix bugs in simd::valid

--- a/fflas-ffpack/fflas/fflas_sparse/Makefile.am
+++ b/fflas-ffpack/fflas/fflas_sparse/Makefile.am
@@ -29,6 +29,7 @@ SUBDIRS=coo csr csr_hyb ell ell_simd hyb_zo sell
 
 
 pkgincludesub_HEADERS=            \
+        sparse_matrix_traits.h \
         utils.h \
         coo.h  \
 	    csr.h  \
